[workspace]
members = [
  "batch",
  "bench",
  "common",
  "connector",
  "frontend",
  "meta",
  "prost",
  "prost/helpers",
  "risedev",
  "rpc_client",
  "server",
  "source",
  "sqlparser",
  "storage",
  "stream",
  "tests/regress",
  "utils/memcomparable",
  "utils/pgwire",
  "utils/pgwire",
  "utils/crossbeam-skiplist"
]

[profile.release]
panic = 'abort'
